--- a/css/style.css
+++ b/css/style.css
@@ -154,10 +154,21 @@ button {
     width: 60rem;
 }
 
+
 .cases h2 {
-   
-font-size: 44px;
-font-weight: 300;
+    font-size: 2.75rem;
+    margin: 1.625rem 0 3.125rem;
+    font-weight: 300;
+}
+
+
+
+
+.cases .devices h3 {
+font-weight: 400;
+font-size: 1.563rem;
+margin: 2.5rem 0px 1.875rem;
+display: block;
 
 }
 
@@ -167,28 +178,26 @@ font-weight: 300;
 	display: inline-block;
 	box-sizing: border-box;
 	height: 4em;
-
+	width: 20em;
+    border: 1px solid black;
+    text-align: center;
 }
  
-.cases .devices > li {
-    width: 33.3333333%;
-    float: left;
-    padding-left: 80px;
-    padding-right: 100px;
-     list-style:none;
+.cases  li {
+    width: 32.3333333%;
+    float: left; 
+    list-style:none;
+
 }
 
 .cases {
 	background-color: #fff;
     overflow: hidden;
-    padding-bottom: 5rem;
+    padding-bottom: 20rem;
 	text-align:center;
     margin-top: 7.875rem;
    
 
-
-.devices {
-  
-
-
+.caption {
+    
 }
